# fine-tuning

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
_board/: README.md  plan.md  process.md  progress.txt
_board/sprints/: 00-bootstrap.md  01-core-infrastructure.md  02-model-management.md  03-data-pipeline.md  04-training.md  05-inference.md  06-polish.md
_docs/: README.md  architecture.md  configuration.md  current-state.md  inference.md  instructions.md  project-structure.md  quickstart.md  requirements.md  roadmap.md  testing.md  training.md
app/: __init__.py  __main__.py
app/core/: __init__.py  config.py  exceptions.py  logging_config.py
app/data/: __init__.py  formatter.py  loader.py  pipeline.py  templates.py  tokenizer.py
app/data/generators/: __init__.py  base.py  qa.py  synthetic.py
app/inference/: __init__.py  cli.py  config.py  engine.py  export.py  prompt.py
app/models/: __init__.py  base.py  lora.py  lora_config.py  registry.py
app/training/: __init__.py  callbacks.py  config.py  trainer.py
app/utils/: __init__.py  device.py  memory.py
configs/: gpt2_lora.env  inference_default.env  phi3_lora.env  tinyllama_lora.env  training_default.env
examples/data/: README.md  alpaca_format.jsonl  raw_text.jsonl  sample_csv.csv  sharegpt_format.jsonl
tests/: conftest.py
tests/integration/: test_e2e.py  test_generator_training.py
tests/unit/: test_cli.py
tests/unit/core/: test_config.py  test_logging.py
tests/unit/data/: test_formatter.py  test_generators.py  test_loader.py  test_templates.py  test_tokenizer.py
tests/unit/inference/: test_cli.py  test_config.py  test_engine.py  test_export.py  test_prompt.py
tests/unit/models/: test_base.py  test_lora.py  test_lora_config.py  test_registry.py
tests/unit/training/: test_callbacks.py  test_config.py
tests/unit/utils/: test_device.py  test_memory.py
